--- a/app/src/main/res/layout/row_news_from_source.xml
+++ b/app/src/main/res/layout/row_news_from_source.xml
@@ -42,6 +42,7 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/textView_author"
                 android:layout_marginTop="5dp"
+                android:textColor="@color/colorPrimary"
                 android:paddingLeft="10dp"
                 android:text="Author - "
                 />
