--- a/app/src/main/res/layout/row_news_sorce.xml
+++ b/app/src/main/res/layout/row_news_sorce.xml
@@ -33,8 +33,10 @@
             android:id="@+id/textView_source_name"
             android:layout_marginTop="10dp"
             android:paddingLeft="10dp"
-            android:textSize="18sp"
-            android:textColor="@color/cardview_dark_background"
+            android:paddingBottom="10dp"
+            android:gravity="center_vertical"
+            android:textSize="16sp"
+            android:textColor="@color/colorPrimary"
             android:text="Source Name"/>
 
     </LinearLayout>
